# pp_2022_spring

./: .gitmodules  CMakeLists.txt
.github/workflows/: main.yml
modules/task_1/lebedev_a_convex_hull/: CMakeLists.txt  convex_hull.cpp  convex_hull.h  main.cpp
modules/task_1/lebedev_a_convex_hull/cmake/: OpenCVGet.txt
